<resources>
    <string name="app_name">Guest Bookly</string>
    <string name="guest_entries_title">Guest Bookly User Entries</string>
    <string name="edit">Edit It</string>
    <string name="delete">Delete</string>

    <string name="add_guest_entry">Add Guest Entry</string>
    <string name="add_guest_entry_error">Data could not be saved.\n\nFirebase Error Message: %s</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="zipcode">Zipcode</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="success_message">We have updated your info in Guest Bookly.  Thanks for sharing %s !</string>
    <string name="please_set">Please set</string>

    <string-array name="themes_array">
        <item>Sand</item>
        <item>Orange</item>
        <item>Candy</item>
        <item>Blossom</item>
        <item>Grape</item>
        <item>Deep</item>
        <item>Sky</item>
        <item>Grass</item>
        <item>Dark</item>
        <item>Snow</item>
        <item>Sea</item>
        <item>Blood</item>
    </string-array>
    <string name="title_activity_guest_book_tabs">GuestBookTabsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_clean_up_firebase">Clean Up Invalid Nodes</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
