<?xml version="1.0" encoding="utf-8"?>
<!-- You need to encapsulate the whole layout within the "layout" view -->
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- "data" is used to denote the POJO classes used -->
    <data>
        <!-- "variable" is used to define name which is like a object and the path of the POJO class -->
        <!-- "name" should be your class name(case Insensitive). -->
        <!-- "type" contains the path to the POJO class -->

        <!-- Declaring guestEntryViewModel class which is used for binding variables to EditTexts -->
        <variable
            name="guestEntryViewModel"
            type="com.demo.guestbook.model.view.GuestEntryViewModel"/>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:flatui="http://schemas.android.com/apk/res-auto"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  tools:context=".activity.base.DemoActivityFlatUi">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                style="@style/WrapperLayout"
                android:orientation="vertical">

                <com.cengalabs.flatui.views.FlatEditText
                    android:id="@+id/edittext_firstname"
                    style="@style/FlatEditText1"
                    android:hint="@string/first_name"
                    app:binding="@{guestEntryViewModel.firstName}"
                    flatui:fl_fieldStyle="fl_box"
                    flatui:fl_theme="@array/grape"/>


                <com.cengalabs.flatui.views.FlatEditText
                    android:id="@+id/edittext_lastname"
                    style="@style/FlatEditText1"
                    android:hint="@string/last_name"
                    app:binding="@{guestEntryViewModel.lastName}"
                    flatui:fl_fieldStyle="fl_box"
                    flatui:fl_theme="@array/grape"/>


                <LinearLayout
                    android:id="@+id/birthday_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <com.cengalabs.flatui.views.FlatButton
                        android:id="@+id/btnChangeDate"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_margin="3dp"
                        android:text="@string/birthday"
                        flatui:fl_fieldStyle="fl_box"
                        flatui:fl_theme="@array/orange"
                        />
                    <!--
                    -->

                    <com.cengalabs.flatui.views.FlatEditText
                        android:id="@+id/edittext_birthday"
                        style="@style/FlatEditText1"
                        android:layout_width="wrap_content"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:padding="10dp"
                        android:textStyle="bold"
                        app:binding="@{guestEntryViewModel.birthday}"
                        flatui:fl_fieldStyle="fl_box"
                        flatui:fl_theme="@array/orange"/>
                </LinearLayout>


                <!--
                maxLength="10" for: 5 digits, dash, 4 digits

                US ZIP code (U.S. postal code) allow both the five-digit
                and nine-digit (called ZIP+4) formats.
                A valid postal code should match 12345 and 12345-6789,
                but not 1234, 123456, 123456789, or 1234-56789.
                -->
                <com.cengalabs.flatui.views.FlatEditText
                    android:id="@+id/edittext_zipcode"
                    style="@style/FlatEditText1"
                    android:digits="0,1,2,3,4,5,6,7,8,9,-"
                    android:hint="@string/zipcode"
                    android:inputType="number|phone"
                    android:maxLength="10"
                    app:binding="@{guestEntryViewModel.zipcode}"
                    flatui:fl_fieldStyle="fl_box"
                    flatui:fl_theme="@array/grape"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <com.cengalabs.flatui.views.FlatButton
                        android:id="@+id/submit_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_margin="3dp"
                        android:text="@string/submit"
                        flatui:fl_fieldStyle="fl_box"
                        flatui:fl_theme="@array/grape"
                        />

                    <!-- serves as a spacer for item to the right, to float right -->
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        />

                    <com.cengalabs.flatui.views.FlatButton
                        android:id="@+id/delete_btn"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_margin="3dp"
                        android:text="@string/delete"
                        flatui:fl_fieldStyle="fl_box"
                        flatui:fl_theme="@array/orange"
                        />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>


    <!--

                    <DatePicker
                        android:id="@+id/birthday_datepicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.cengalabs.flatui.views.FlatEditText
                        android:id="@+id/edittext_birthday"
                        android:hint="@string/birthday"
                        style="@style/FlatEditText1"
                        flatui:fl_fieldStyle="fl_box"
                        flatui:fl_theme="@array/grape"
                        app:binding="@{guestEntryViewModel.birthday}"/>

    -->